Fix CORS in SecurityConfig to allow all origins